<?xml version="1.0"?>
<package format="3">
  <name>arx5_bringup</name>
  <version>0.2.0</version>
  <description>ARX5 Bringup Package</description>
  <maintainer email="thefoxfoxfox@outlook.com">lelehanbao</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
